# joss-dataset

./: .pre-commit-config.yaml  pyproject.toml
src/analysis/: issues_per_year.py
src/ingest/: github_issues.py
src/transform/: normalize_joss_submissions.py
